cb project update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -537,8 +537,14 @@
 		<Unit filename="..\..\src\gui\dialogs\mp_connect.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_create_game.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_create_game.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\mp_create_game_choose_mods.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\mp_create_game_choose_mods.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_create_game_set_password.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_create_game_set_password.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\mp_depcheck_confirm_change.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\mp_depcheck_confirm_change.hpp" />
+		<Unit filename="..\..\src\gui\dialogs\mp_depcheck_select_new.cpp" />
+		<Unit filename="..\..\src\gui\dialogs\mp_depcheck_select_new.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_host_game_prompt.cpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_host_game_prompt.hpp" />
 		<Unit filename="..\..\src\gui\dialogs\mp_login.cpp" />
@@ -732,8 +738,12 @@
 		<Unit filename="..\..\src\mouse_events.hpp" />
 		<Unit filename="..\..\src\mouse_handler_base.cpp" />
 		<Unit filename="..\..\src\mouse_handler_base.hpp" />
+		<Unit filename="..\..\src\mp_depcheck.cpp" />
+		<Unit filename="..\..\src\mp_depcheck.hpp" />
 		<Unit filename="..\..\src\mp_game_settings.cpp" />
 		<Unit filename="..\..\src\mp_game_settings.hpp" />
+		<Unit filename="..\..\src\mp_options.cpp" />
+		<Unit filename="..\..\src\mp_options.hpp" />
 		<Unit filename="..\..\src\multiplayer.cpp" />
 		<Unit filename="..\..\src\multiplayer.hpp" />
 		<Unit filename="..\..\src\multiplayer_connect.cpp" />
