--- a/projectfiles/VC9/wesnoth.vcproj
+++ b/projectfiles/VC9/wesnoth.vcproj
@@ -69,6 +69,7 @@
 				AdditionalDependencies="libintl.lib SDL.lib SDL_image.lib SDL_ttf.lib SDL_mixer.lib SDL_net.lib cairo.lib winmm.lib ws2_32.lib SDLmain.lib pango-1.0.lib pangocairo-1.0.lib gobject-2.0.lib glib-2.0.lib $(IntDir)\liblua.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=""
+				IgnoreDefaultLibraryNames="MSVCR90;MSVCRT"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				TargetMachine="1"
