project update (bz2 dependency)

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -73,6 +73,7 @@
 			<Add library="libboost_system-mgw45-mt-1_46_1" />
 			<Add library="libboost_thread-mgw45-mt-1_46_1" />
 			<Add library="libz.dll" />
+			<Add library="libbz2" />
 			<Add directory=".\" />
 		</Linker>
 		<Unit filename="..\..\packaging\windows\wesnoth.rc">
