--- a/projectfiles/CodeBlocks/wesnothd.cbp
+++ b/projectfiles/CodeBlocks/wesnothd.cbp
@@ -53,6 +53,7 @@
 			<Add library="z" />
 			<Add library="libboost_iostreams-mgw45-mt-1_46_1" />
 			<Add library="libz.dll" />
+			<Add library="libbz2" />
 		</Linker>
 		<Unit filename="..\..\src\about.hpp" />
 		<Unit filename="..\..\src\color_range.cpp" />
