Schema: Definition of [modify_ai] tag
Also reorder some things in [aspect] for better matching

--- a/data/schema/ai/aspect_complex.cfg
+++ b/data/schema/ai/aspect_complex.cfg
@@ -120,21 +120,23 @@
 	max=infinite
 	{AI_ASPECT_INVALIDATE}
 	[if]
-		{AI_ASPECT_FILTER_STANDARD}
+		# Check for composite first so that you can have a composite_aspect with id=attacks
+		{AI_ASPECT_FILTER_COMPOSITE}
+		{AI_ASPECT_FILTER_DEFAULT}
 		[then]
-			{AI_ASPECT_SWITCH $ai/standard_aspect}
+			{AI_ASPECT_SWITCH $ai/composite_aspect}
 		[/then]
 		[elseif]
-			{AI_ASPECT_FILTER_COMPOSITE}
-			{AI_ASPECT_FILTER_DEFAULT}
-			[then]
-				{AI_ASPECT_SWITCH $ai/composite_aspect}
-			[/then]
-		[/elseif]
-		[elseif]
+			# Check for attacks next so that you can't have standard_aspect with id=attacks
 			{AI_ASPECT_FILTER_ATTACKS}
 			[then]
 				super="$ai/facet~attacks"
+			[/then]
+		[/elseif]
+		[elseif]
+			{AI_ASPECT_FILTER_STANDARD}
+			[then]
+				{AI_ASPECT_SWITCH $ai/standard_aspect}
 			[/then]
 		[/elseif]
 		[elseif]
