--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -182,6 +182,26 @@
         name="ai_ca_formula_type"
         value="movement|attack"
     [/type]
+    [type]
+        name="ai_modify_action"
+        value="add|change|(try_)?delete"
+    [/type]
+    [type]
+        name="ai_modify_path"
+        # This only does some very basic validation and accepts quite a few invalid values.
+        # For example, only aspect[recruitment_instructions] can have a .recruit or .limit suffix.
+        [union]
+            [type]
+                value="aspect\[([a-zA-Z0-9_]+|\*)?\](\.facet\[([a-zA-Z0-9_]+|\*)?\])*(\.(recruit|limit)\[([a-zA-Z0-9_]+|\*)?\])?"
+            [/type]
+            [type]
+                value="goal\[([a-zA-Z0-9_]+|\*)?\]"
+            [/type]
+            [type]
+                value="stage\[([a-zA-Z0-9_]+|\*)?\](\.candidate_action\[([a-zA-Z0-9_]+|\*)?\])?"
+            [/type]
+        [/union]
+    [/type]
     [tag]
         name="root"
         min=1
