Fix [effect][set_specials] not correctly allowing special ability tags

--- a/data/schema/units/modifications.cfg
+++ b/data/schema/units/modifications.cfg
@@ -45,7 +45,7 @@
 
 				[tag]
 					name="set_specials"
-					super="units/unit_type/attack/specials"
+					super="units/unit_type~core/attack/specials"
 					{DEFAULT_KEY mode effect_set_special_mode replace}
 				[/tag]
 			[/case]
