Schema: Add all known ActionWML and ConditionalWML tags (based on wiki)
This also finishes up the StoryWML definition, adds validation for
map and shroud data, and a few other small schema fixes

--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -32,8 +32,8 @@
 	{DEFAULT_KEY hidden bool no}
 	{SIMPLE_KEY fog bool}
 	{SIMPLE_KEY shroud bool}
-	{SIMPLE_KEY fog_data string}
-	{SIMPLE_KEY shroud_data string}
+	{SIMPLE_KEY fog_data shroud_data}
+	{SIMPLE_KEY shroud_data shroud_data}
 	{SIMPLE_KEY persistent bool}
 	{SIMPLE_KEY save_id string}
 	{SIMPLE_KEY previous_save_id string}
@@ -78,7 +78,7 @@
 	[tag]
 		name="ai"
 		max=infinite
-		super="ais/ai"
+		super="$ai"
 	[/tag]
 
 	{DEFAULT_KEY allow_player bool yes}
@@ -300,7 +300,7 @@
 	{ADDON_DESCRIPTION}
 	{SIMPLE_KEY next_scenario string}
 	{SIMPLE_KEY name t_string}
-	{SIMPLE_KEY map_data string}
+	{SIMPLE_KEY map_data map_data}
 	{DEFAULT_KEY turns int -1}
 	{DEFAULT_KEY turn_at int 1}
 	{DEFAULT_KEY random_start_time bool,int_list no} # Note: Is it random_start_time or random_starting_time? (There's some uses of the latter)
@@ -327,12 +327,12 @@
 	{SIMPLE_KEY force_lock_settings bool}
 	[tag]
 		name="story"
-		# TODO: Remove this once the actual supported tags are properly documented (basically messages, insert_tag, if/then/else, switch/case)
-		any_tag=yes
+		{INSERT_TAG}
 		# TODO: Is this really recognized at story toplevel? Wiki claims it is.
 		[tag]
 			name="image"
 			max=infinite
+			{INSERT_TAG}
 			{SIMPLE_KEY x int}
 			{SIMPLE_KEY y int}
 			{SIMPLE_KEY centered bool}
@@ -349,6 +349,7 @@
 		[tag]
 			name="part"
 			max=infinite
+			{INSERT_TAG}
 			{SIMPLE_KEY background string}
 			{DEFAULT_KEY scale_background bool yes}
 			{SIMPLE_KEY story t_string}
@@ -362,6 +363,7 @@
 			[tag]
 				name="background_layer"
 				max=infinite
+				{INSERT_TAG}
 				{SIMPLE_KEY image string}
 				{SIMPLE_KEY scale_vertically bool}
 				{SIMPLE_KEY scale_horizontally bool}
@@ -385,11 +387,67 @@
 					super="scenario/story/part"
 				[/tag]
 			[/tag]
-			# TODO: Switch/case
+			[tag]
+				name="switch"
+				max=infinite
+				{REQUIRED_KEY variable string}
+				{INSERT_TAG}
+				[tag]
+					name="case"
+					max=infinite
+					super="scenario/story/part"
+					{REQUIRED_KEY value string}
+				[/tag]
+				[tag]
+					name="else"
+					super="scenario/story/part"
+				[/tag]
+			[/tag]
 			[link]
 				name="scenario/story/image"
 			[/link]
+			[link]
+				name="$action_wml/deprecated_message"
+			[/link]
+			[link]
+				name="$action_wml/wml_message"
+			[/link]
 		[/tag]
+		[tag]
+			name="if"
+			max=infinite
+			super="$conditional_wml"
+			[tag]
+				name="then"
+				super="scenario/story"
+			[/tag]
+			[tag]
+				name="else"
+				super="scenario/story"
+			[/tag]
+		[/tag]
+		[tag]
+			name="switch"
+			max=infinite
+			{REQUIRED_KEY variable string}
+			{INSERT_TAG}
+			[tag]
+				name="case"
+				max=infinite
+				super="scenario/story"
+				{REQUIRED_KEY value string}
+			[/tag]
+			[tag]
+				name="else"
+				super="scenario/story"
+			[/tag]
+		[/tag]
+		[link]
+			name="$action_wml/deprecated_message"
+		[/link]
+		[link]
+			name="$action_wml/wml_message"
+		[/link]
 	[/tag]
 	[tag]
 		name="label"
@@ -410,6 +468,8 @@
 		{SIMPLE_KEY y range_list}
 		{SIMPLE_KEY image string}
 		{SIMPLE_KEY halo string}
+		{SIMPLE_KEY team_name string}
+		{DEFAULT_KEY visible_in_fog bool yes}
 	[/tag]
 	[tag]
 		name="time"
