--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -1,9 +1,19 @@
 {./macros.cfg}
 
+#define INSERT_TAG
+    [tag]
+        name="insert_tag"
+        max=infinite
+        {SIMPLE_KEY name string}
+        {SIMPLE_KEY variable string}
+    [/tag]
+#enddef
+
 [wml_schema]
     # TODO: Or should we just include {./types}?
     {./types/basic.cfg}
     {./types/formula.cfg}
+    {./types/subst.cfg}
     [type]
         name=int_percent
         value="-?\d+%?"
@@ -14,7 +24,7 @@
     [/type]
     [type]
         name="version"
-        value="\d+(\.\d+(\.\d+))"
+        value="\d+(\.\d+(\.\d+)?)"
     [/type]
     [type]
         name="text_alignment"
@@ -102,6 +112,32 @@
         [/list]
     [/type]
     [type]
+        name="map_data"
+        [list]
+            split="\n"
+            [element]
+                [list]
+                    [element]
+                        value="([a-zA-Z0-9_]+\s+)?[A-Za-z\\|/\^_]+"
+                    [/element]
+                [/list]
+            [/element]
+        [/list]
+    [/type]
+    [type]
+        name=terrain_layer
+        value="overlay|base|both"
+    [/type]
+    [type]
+        name="shroud_data"
+        [list]
+            split="\n"
+            [element]
+                value="\|[01]*"
+            [/element]
+        [/list]
+    [/type]
+    [type]
         name=irdya_date
         value="\d+ [A-Z][A-Z]"
     [/type]
@@ -132,7 +168,11 @@
     [/type]
     [type]
         name="anim_hits"
-        value="(hit|no|miss|kill|yes)(,(hit|no|miss|kill|yes))*"
+        [list]
+            [element]
+                value="hit|no|miss|kill|yes"
+            [/element]
+        [/list]
     [/type]
     [type]
         name="color"
@@ -171,6 +211,14 @@
         value="append|replace"
     [/type]
     [type]
+        name="set_variables_mode"
+        value="append|repace|merge|insert"
+    [/type]
+    [type]
+        name="store_unit_mode"
+        value="append|repace|always_clear"
+    [/type]
+    [type]
         name="ai_grouping"
         value="offensive|defensive|no"
     [/type]
@@ -202,6 +250,75 @@
             [/type]
         [/union]
     [/type]
+    [type]
+        name="endlevel_result"
+        value="victory|defeat"
+    [/type]
+    [type]
+        name="object_duration"
+        value="scenario|forever|turn|turn[ _]end"
+    [/type]
+    [type]
+        name="heal_amount"
+        [union]
+            [type]
+                link=int
+            [/type]
+            [type]
+                value="full"
+            [/type]
+        [/union]
+    [/type]
+    [type]
+        name="image_pos"
+        value="left|right"
+    [/type]
+    [type]
+        name="objective_condition"
+        value="win|lose"
+    [/type]
+    [type]
+        name="deprecation_level"
+        value="[1-4]"
+    [/type]
+    [type]
+        name="logger"
+        value="err(or)?|warn(ing)?|debug|info"
+    [/type]
+    [type]
+        name="stamp"
+        value="stamp"
+    [/type]
+    [type]
+        name="rounding_method"
+        [union]
+            [type]
+                link=int
+            [/type]
+            [type]
+                value="floor|ceil|trunc"
+            [/type]
+        [/union]
+    [/type]
+    [type]
+        name="reachable_range"
+        value="movement|attack|vision"
+    [/type]
+    [type]
+        name="reachable_moves"
+        value="current|max"
+    [/type]
+    [type]
+        name="search_recall_list"
+        [union]
+            [type]
+                link=bool
+            [/type]
+            [type]
+                value="only"
+            [/type]
+        [/union]
+    [/type]
     [tag]
         name="root"
         min=1
@@ -218,6 +335,7 @@
                 name="code"
                 type="string"
             [/key]
+            {DATA_TAG args 0 1}
         [/tag]
     [/tag]
 [/wml_schema]
