--- a/data/schema/units/abilities.cfg
+++ b/data/schema/units/abilities.cfg
@@ -99,6 +99,10 @@
 		{FILTER_TAG "filter" unit ()}
 		{FILTER_TAG "source" location ()}
 		{FILTER_TAG "target" location ()}
+		{DEFAULT_KEY bidirectional bool yes}
+		{DEFAULT_KEY always_visible bool no}
+		{DEFAULT_KEY allow_vision bool yes}
+		{DEFAULT_KEY pass_allied_units bool yes}
 	[/tag]
 [/tag]
 [tag]
