--- a/data/schema/core/conditionalwml.cfg
+++ b/data/schema/core/conditionalwml.cfg
@@ -1,7 +1,51 @@
 
+# All keys here are strings, because there could be variable substitutions
 [tag]
 	name="$conditional_wml"
 	max=0
+	{INSERT_TAG}
+	[tag]
+		name="true,false"
+		max=infinite
+		{INSERT_TAG}
+	[/tag]
+	{FILTER_TAG "have_unit" unit (
+		max=infinite
+		{INSERT_TAG}
+		{DEFAULT_KEY search_recall_list string no}
+		{SIMPLE_KEY count string}
+	)}
+	{FILTER_TAG "have_location" location (
+		max=infinite
+		{INSERT_TAG}
+		{SIMPLE_KEY count string}
+	)}
+	[tag]
+		name="variable"
+		max=infinite
+		{INSERT_TAG}
+		{SIMPLE_KEY name string}
+		{SIMPLE_KEY contains string}
+		{SIMPLE_KEY equals string}
+		{SIMPLE_KEY not_equals string}
+		{SIMPLE_KEY numerical_equals string}
+		{SIMPLE_KEY numerical_not_equals string}
+		{SIMPLE_KEY greater_than string}
+		{SIMPLE_KEY greater_than_equal_to string}
+		{SIMPLE_KEY less_than string}
+		{SIMPLE_KEY less_than_equal_to string}
+		{SIMPLE_KEY boolean_equals string}
+		{SIMPLE_KEY boolean_not_equals string}
+	[/tag]
+	[tag]
+		name="found_item"
+		max=infinite
+		{INSERT_TAG}
+		{REQUIRED_KEY id string}
+	[/tag]
+	[tag]
+		name="and,or,not"
+		super="$condition_wml"
+	[/tag]
 	any_tag=yes
-	# TODO: Fill in all known ConditionalWML here
 [/tag]
