Schema: Definition of [micro_ai] tag, including all known MicroAIs

--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -319,6 +319,10 @@
             [/type]
         [/union]
     [/type]
+    [type]
+        name="micro_ai_action"
+        value="add|delete|change"
+    [/type]
     [tag]
         name="root"
         min=1
