Schema: Pango formatting keys for [message]

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -20,6 +20,27 @@
 	{SIMPLE_KEY blue {TYPE}}
 #enddef
 
+#define FORMATTING_KEYS
+	{SIMPLE_KEY font string}
+	{SIMPLE_KEY font_family string}
+	{SIMPLE_KEY font_size font_size}
+	{SIMPLE_KEY font_style font_style}
+	{SIMPLE_KEY font_weight font_weight}
+	{SIMPLE_KEY font_variant font_variant}
+	{SIMPLE_KEY font_stretch font_stretch}
+	{SIMPLE_KEY color html_color}
+	{SIMPLE_KEY bgcolor html_color}
+	{SIMPLE_KEY underline font_underline}
+	{SIMPLE_KEY underline_color html_color}
+	{SIMPLE_KEY rise s_int}
+	{SIMPLE_KEY strikethrough s_bool}
+	{SIMPLE_KEY strikethrough_color html_color}
+	{SIMPLE_KEY fallback s_bool}
+	{SIMPLE_KEY letter_spacing s_unsigned}
+	{SIMPLE_KEY gravity font_gravity}
+	{SIMPLE_KEY gravity_hint font_gravity_hint}
+#enddef
+
 [tag]
 	name="$action_wml"
 	max=0
@@ -581,6 +602,7 @@
 		{DEFAULT_KEY highlight s_bool yes}
 		{SIMPLE_KEY duration s_unsigned}
 		{SIMPLE_KEY sound string_list}
+		{FORMATTING_KEYS}
 		{SHOW_IF_TAG}
 		[tag]
 			name="option"
