--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -14,6 +14,7 @@
     {./types/basic.cfg}
     {./types/formula.cfg}
     {./types/subst.cfg}
+    {./types/pango.cfg}
     [type]
         name=int_percent
         value="-?\d+%?"
