Schema ActionWML: Small bugfixes and add undocumented stuff from perusing source code

--- a/data/schema/core/conditionalwml.cfg
+++ b/data/schema/core/conditionalwml.cfg
@@ -43,6 +43,10 @@
 		{INSERT_TAG}
 		{REQUIRED_KEY id string}
 	[/tag]
+	{EMPTY_TAG "proceed_to_next_scenario" 0 infinite}
+	[link]
+		name="lua"
+	[/link]
 	[tag]
 		name="and,or,not"
 		super="$condition_wml"
