--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -65,6 +65,17 @@
         value="no_leader_left|no_units_left|never|always"
     [/type]
     [type]
+        name="root_base"
+        [union]
+            [type]
+                link=unsigned
+            [/type]
+            [type]
+                value="square|cube"
+            [/type]
+        [/union]
+    [/type]
+    [type]
         name=range_list
         # value="\d+(-\d+)?(,\d+(-\d+)?)*"
         [list]
@@ -164,6 +175,25 @@
         [list]
             [element]
                 link="dir"
+            [/element]
+        [/list]
+    [/type]
+    [type]
+        name="anim_hits"
+        [union]
+            [type]
+                link=bool
+            [/type]
+            [type]
+                value="hit|miss|kill"
+            [/type]
+        [/union]
+    [/type]
+    [type]
+        name="anim_hits_list"
+        [list]
+            [element]
+                link="anim_hits"
             [/element]
         [/list]
     [/type]
