--- a/data/schema/units/abilities.cfg
+++ b/data/schema/units/abilities.cfg
@@ -96,9 +96,9 @@
 		name="tunnel"
 		min=1
 		{SIMPLE_KEY id string}
-		{FILTER_TAG "filter" unit ()}
-		{FILTER_TAG "source" location ()}
-		{FILTER_TAG "target" location ()}
+		{FILTER_TAG "filter" unit min=1}
+		{FILTER_TAG "source" location min=1}
+		{FILTER_TAG "target" location min=1}
 		{DEFAULT_KEY bidirectional bool yes}
 		{DEFAULT_KEY always_visible bool no}
 		{DEFAULT_KEY allow_vision bool yes}
