--- a/data/schema/units/animations.cfg
+++ b/data/schema/units/animations.cfg
@@ -10,7 +10,7 @@
 	{SIMPLE_KEY direction dir_list}
 	{SIMPLE_KEY frequency int}
 	{SIMPLE_KEY base_score int}
-	{SIMPLE_KEY hits anim_hits}
+	{SIMPLE_KEY hits anim_hits_list}
 	
 	{FILTER_TAG "filter" unit ()}
 	{FILTER_TAG "filter_second" unit ()}
