--- a/data/schema/types/basic.cfg
+++ b/data/schema/types/basic.cfg
@@ -34,6 +34,11 @@
 [/type]
 
 [type]
+	name=char
+	value="."
+[/type]
+
+[type]
 	name=color
 	value="(?:2[0-5][0-5]|[01]?\d?\d)[.,]\s*(?:2[0-5][0-5]|[01]?\d?\d)[.,]\s*(?:2[0-5][0-5]|[01]?\d?\d)[.,]\s*(?:2[0-5][0-5]|[01]?\d?\d)"
 [/type]
