Schema: Just allow any key in [language]

--- a/data/schema/core/config.cfg
+++ b/data/schema/core/config.cfg
@@ -176,16 +176,7 @@
 [tag]
 	name="language"
 	min=1
-	{SIMPLE_KEY EASY t_string}
-	{SIMPLE_KEY NORMAL t_string}
-	{SIMPLE_KEY HARD t_string}
-	{SIMPLE_KEY NIGHTMARE t_string}
-	{SIMPLE_KEY lawful_description t_string}
-	{SIMPLE_KEY neutral_description t_string}
-	{SIMPLE_KEY chaotic_description t_string}
-	{SIMPLE_KEY liminal_description t_string}
-	{SIMPLE_KEY range_* t_string}
-	{SIMPLE_KEY type_* t_string}
+	{ANY_KEY t_string}
 [/tag]
 [tag]
 	name="naming"
