First batch of schema fixes
- Allow for variable substitution in filter tags (mostly)
- Fix real not matching numbers like .5
- Support x,y=recall,recall

After this commit, there are no schema errors in the tutorial.

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -325,8 +325,8 @@
 		max=infinite
 		super="$filter_unit"
 		{INSERT_TAG}
-		{SIMPLE_KEY to_x s_int}
-		{SIMPLE_KEY to_y s_int}
+		{SIMPLE_KEY to_x range_list}
+		{SIMPLE_KEY to_y range_list}
 		{SIMPLE_KEY to_location string}
 		{DEFAULT_KEY fire_event s_bool no}
 		{DEFAULT_KEY check_passability s_bool yes}
