--- a/data/schema/filters/side.cfg
+++ b/data/schema/filters/side.cfg
@@ -19,6 +19,6 @@
 	name="$filter_vision"
 	max=0
 	super="$filter_side"
-	{DEFAULT_KEY visible bool yes}
-	{DEFAULT_KEY respect_fog bool yes}
+	{DEFAULT_KEY visible s_bool yes}
+	{DEFAULT_KEY respect_fog s_bool yes}
 [/tag]
