--- a/data/schema/filters/unit.cfg
+++ b/data/schema/filters/unit.cfg
@@ -14,14 +14,14 @@
 	{SIMPLE_KEY status string}
 	{SIMPLE_KEY side range_list}
 	{DEPRECATED_KEY has_weapon string}
-	{SIMPLE_KEY canrecruit bool}
+	{SIMPLE_KEY canrecruit s_bool}
 	{SIMPLE_KEY gender gender}
 	{SIMPLE_KEY role string}
 	{SIMPLE_KEY level range_list}
-	{SIMPLE_KEY defense int}
-	{SIMPLE_KEY movement_cost int}
-	{SIMPLE_KEY x range_list}
-	{SIMPLE_KEY y range_list}
+	{SIMPLE_KEY defense s_int}
+	{SIMPLE_KEY movement_cost s_int}
+	{SIMPLE_KEY x s_coordinates}
+	{SIMPLE_KEY y s_coordinates}
 	{SIMPLE_KEY find_in string}
 	{SIMPLE_KEY formula formula}
 	{SIMPLE_KEY lua_function string}
@@ -44,7 +44,7 @@
 	name="$filter_adjacent"
 	max=0
 	super="$filter_unit"
-	{SIMPLE_KEY count int}
+	{SIMPLE_KEY count s_int}
 	{SIMPLE_KEY adjacent dir_list}
-	{SIMPLE_KEY is_enemy bool}
+	{SIMPLE_KEY is_enemy s_bool}
 [/tag]
