--- a/data/schema/filters/weapon.cfg
+++ b/data/schema/filters/weapon.cfg
@@ -8,10 +8,10 @@
 	{SIMPLE_KEY special string}
 	{SIMPLE_KEY special_active string}
 	{SIMPLE_KEY formula formula}
-	{SIMPLE_KEY damage int}
-	{SIMPLE_KEY number int}
-	{SIMPLE_KEY parry int}
-	{SIMPLE_KEY accuracy int}
-	{SIMPLE_KEY movement_used int}
+	{SIMPLE_KEY damage s_int}
+	{SIMPLE_KEY number s_int}
+	{SIMPLE_KEY parry s_int}
+	{SIMPLE_KEY accuracy s_int}
+	{SIMPLE_KEY movement_used s_int}
 	{FILTER_BOOLEAN_OPS weapon}
 [/tag]
