--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -77,7 +77,6 @@
     [/type]
     [type]
         name=range_list
-        # value="\d+(-\d+)?(,\d+(-\d+)?)*"
         [list]
             [element]
                 [list]
@@ -85,7 +84,7 @@
                     min=1
                     max=2
                     [element]
-                        link="int"
+                        link=unsigned
                     [/element]
                 [/list]
             [/element]
@@ -354,6 +353,18 @@
         name="micro_ai_action"
         value="add|delete|change"
     [/type]
+    [type]
+        name="coordinates"
+        [union]
+            [type]
+                link=range_list
+            [/type]
+            [type]
+                value="recall"
+            [/type]
+        [/union]
+    [/type]
+    {SUBST_TYPE coordinates}
     [tag]
         name="root"
         min=1
