--- a/data/schema/filters/location.cfg
+++ b/data/schema/filters/location.cfg
@@ -5,13 +5,13 @@
 	{SIMPLE_KEY  time_of_day string}
 	{SIMPLE_KEY time_of_day_id string}
 	{SIMPLE_KEY terrain terrain_list}
-	{SIMPLE_KEY x range_list}
-	{SIMPLE_KEY y range_list}
+	{SIMPLE_KEY x s_coordinates}
+	{SIMPLE_KEY y s_coordinates}
 	{SIMPLE_KEY area string}
-	{SIMPLE_KEY include_borders bool}
+	{SIMPLE_KEY include_borders s_bool}
 	{DEPRECATED_KEY owner_side range_list}
 	{SIMPLE_KEY find_in string}
-	{SIMPLE_KEY radius int}
+	{SIMPLE_KEY radius s_int}
 	{SIMPLE_KEY formula formula}
 	{SIMPLE_KEY lua_function string}
 	{SIMPLE_KEY location_id string}
@@ -28,6 +28,6 @@
 	name="$filter_adjacent_location"
 	max=0
 	super="$filter_location"
-	{SIMPLE_KEY count int}
+	{SIMPLE_KEY count s_int}
 	{SIMPLE_KEY adjacent dir_list}
 [/tag]
