Schema: Support for turns=unlimited

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -295,7 +295,7 @@
 		name="modify_turns"
 		max=infinite
 		{INSERT_TAG}
-		{SIMPLE_KEY value s_unsigned}
+		{SIMPLE_KEY value s_unsigned,turns}
 		{SIMPLE_KEY add s_int}
 		{SIMPLE_KEY current s_unsigned}
 	[/tag]
