--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -301,7 +301,7 @@
 	{SIMPLE_KEY next_scenario string}
 	{SIMPLE_KEY name t_string}
 	{SIMPLE_KEY map_data map_data}
-	{DEFAULT_KEY turns int -1}
+	{DEFAULT_KEY turns turns unlimited}
 	{DEFAULT_KEY turn_at int 1}
 	{DEFAULT_KEY random_start_time bool,int_list no} # Note: Is it random_start_time or random_starting_time? (There's some uses of the latter)
 	{DEPRECATED_KEY music string}
