--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -364,6 +364,17 @@
             [/type]
         [/union]
     [/type]
+    [type]
+        name="turns"
+        [union]
+            [type]
+                link=unsigned
+            [/type]
+            [type]
+                value="-1|unlimited"
+            [/type]
+        [/union]
+    [/type]
     {SUBST_TYPE coordinates}
     [tag]
         name="root"
