Schema: Fix several more cases of keys failing to accept variable substitutions

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -233,7 +233,8 @@
 		{SIMPLE_KEY text t_string}
 		{SIMPLE_KEY male_text t_string}
 		{SIMPLE_KEY female_text t_string}
-		{COLOR_KEYS s_unsigned}
+		{COLOR_KEYS s_unsigned} # TODO: These are probably deprecated?
+		{SIMPLE_KEY color s_color}
 		{DEFAULT_KEY advance s_bool yes}
 		{DEFAULT_KEY fire_event s_bool no}
 		{DEFAULT_KEY animate s_bool yes}
@@ -325,8 +326,8 @@
 		max=infinite
 		super="$filter_unit"
 		{INSERT_TAG}
-		{SIMPLE_KEY to_x range_list}
-		{SIMPLE_KEY to_y range_list}
+		{SIMPLE_KEY to_x s_range_list}
+		{SIMPLE_KEY to_y s_range_list}
 		{SIMPLE_KEY to_location string}
 		{DEFAULT_KEY fire_event s_bool no}
 		{DEFAULT_KEY check_passability s_bool yes}
@@ -605,7 +606,7 @@
 		{SIMPLE_KEY male_message t_string}
 		{SIMPLE_KEY female_message t_string}
 		{SIMPLE_KEY wait_description t_string}
-		{SIMPLE_KEY side_for range_list}
+		{SIMPLE_KEY side_for s_range_list}
 		{SIMPLE_KEY image string}
 		{SIMPLE_KEY mirror s_bool}
 		{SIMPLE_KEY second_image string}
@@ -720,11 +721,13 @@
 	[tag]
 		name="item"
 		max=infinite
-		super="scenario/item,$filter_location"
+		super="$filter_location,scenario/item"
 		{INSERT_TAG}
 		{DEFAULT_KEY redraw s_bool yes}
 		{SIMPLE_KEY write_name string}
 		{SIMPLE_KEY name string}
+		# Override some supertag keys to allow variable substitutions
+		{DEFAULT_KEY visible_in_fog s_bool yes}
 	[/tag]
 	[tag]
 		name="remove_item"
@@ -745,8 +748,8 @@
 		name="$fake_unit"
 		max=0
 		{SIMPLE_KEY type string}
-		{SIMPLE_KEY x range_list}
-		{SIMPLE_KEY y range_list}
+		{SIMPLE_KEY x s_range_list}
+		{SIMPLE_KEY y s_range_list}
 		{SIMPLE_KEY side s_unsigned}
 		{SIMPLE_KEY gender gender}
 		{SIMPLE_KEY variation string}
@@ -828,8 +831,8 @@
 		{SIMPLE_KEY chance s_unsigned}
 		{SIMPLE_KEY check_fogged s_bool}
 		{SIMPLE_KEY check_shrouded s_bool}
-		{SIMPLE_KEY x range_list}
-		{SIMPLE_KEY y range_list}
+		{SIMPLE_KEY x s_range_list}
+		{SIMPLE_KEY y s_range_list}
 		{DEFAULT_KEY fade_range s_unsigned 3}
 		{DEFAULT_KEY full_range s_unsigned 14}
 		{SIMPLE_KEY loop s_int}
@@ -1300,16 +1303,16 @@
 			[/case]
 			[case]
 				value=bottleneck_defense
-				{REQUIRED_KEY x range_list}
-				{REQUIRED_KEY y range_list}
-				{REQUIRED_KEY enemy_x range_list}
-				{REQUIRED_KEY enemy_y range_list}
+				{REQUIRED_KEY x s_range_list}
+				{REQUIRED_KEY y s_range_list}
+				{REQUIRED_KEY enemy_x s_range_list}
+				{REQUIRED_KEY enemy_y s_range_list}
 				{DEFAULT_KEY active_side_leader s_bool no}
 				{DEFAULT_KEY ca_score s_unsigned 300000}
-				{SIMPLE_KEY healer_x range_list}
-				{SIMPLE_KEY healer_y range_list}
-				{SIMPLE_KEY leadership_x range_list}
-				{SIMPLE_KEY leadership_y range_list}
+				{SIMPLE_KEY healer_x s_range_list}
+				{SIMPLE_KEY healer_y s_range_list}
+				{SIMPLE_KEY leadership_x s_range_list}
+				{SIMPLE_KEY leadership_y s_range_list}
 			[/case]
 			[case]
 				value=fast_ai
@@ -1415,8 +1418,8 @@
 				value=messenger_escort
 				{FILTER_TAG "filter" unit min=1}
 				{DEPRECATED_KEY id string}
-				{REQUIRED_KEY waypoint_x range_list}
-				{REQUIRED_KEY waypoint_y range_list}
+				{REQUIRED_KEY waypoint_x s_range_list}
+				{REQUIRED_KEY waypoint_y s_range_list}
 				{DEFAULT_KEY ca_score s_unsigned 300000}
 				{DEFAULT_KEY enemy_death_chance s_real 0.67}
 				{DEFAULT_KEY messenger_death_chance s_bool 0.0}
@@ -1427,8 +1430,8 @@
 				value=patrol
 				{FILTER_TAG "filter" unit min=1}
 				{DEPRECATED_KEY id string}
-				{REQUIRED_KEY waypoint_x range_list}
-				{REQUIRED_KEY waypoint_y range_list}
+				{REQUIRED_KEY waypoint_x s_range_list}
+				{REQUIRED_KEY waypoint_y s_range_list}
 				{SIMPLE_KEY attack string_list}
 				{DEFAULT_KEY ca_score s_unsigned 300000}
 				{DEFAULT_KEY one_time_only s_bool no}
