--- a/data/schema/filters/unit.cfg
+++ b/data/schema/filters/unit.cfg
@@ -12,12 +12,12 @@
 	{SIMPLE_KEY ability string}
 	{SIMPLE_KEY trait string}
 	{SIMPLE_KEY status string}
-	{SIMPLE_KEY side range_list}
+	{SIMPLE_KEY side s_range_list}
 	{DEPRECATED_KEY has_weapon string}
 	{SIMPLE_KEY canrecruit s_bool}
 	{SIMPLE_KEY gender gender}
 	{SIMPLE_KEY role string}
-	{SIMPLE_KEY level range_list}
+	{SIMPLE_KEY level s_range_list}
 	{SIMPLE_KEY defense s_int}
 	{SIMPLE_KEY movement_cost s_int}
 	{SIMPLE_KEY x s_coordinates}
