--- a/data/schema/game_config.cfg
+++ b/data/schema/game_config.cfg
@@ -376,6 +376,7 @@
         [/union]
     [/type]
     {SUBST_TYPE coordinates}
+    {SUBST_TYPE range_list}
     [tag]
         name="root"
         min=1
