--- a/data/schema/filters/location.cfg
+++ b/data/schema/filters/location.cfg
@@ -9,7 +9,7 @@
 	{SIMPLE_KEY y s_coordinates}
 	{SIMPLE_KEY area string}
 	{SIMPLE_KEY include_borders s_bool}
-	{DEPRECATED_KEY owner_side range_list}
+	{DEPRECATED_KEY owner_side s_range_list}
 	{SIMPLE_KEY find_in string}
 	{SIMPLE_KEY radius s_int}
 	{SIMPLE_KEY formula formula}
