Schema: Some missing [unit] keys and promote some [multiplayer] keys to [scenario]

--- a/data/schema/core/actionwml.cfg
+++ b/data/schema/core/actionwml.cfg
@@ -167,6 +167,8 @@
 		max=infinite
 		super="units/$unit"
 		{INSERT_TAG}
+		{DEFAULT_KEY animate s_bool no}
+		{SIMPLE_KEY to_variable string}
 	[/tag]
 	[tag]
 		name="recall"
