--- a/data/schema/core/addons.cfg
+++ b/data/schema/core/addons.cfg
@@ -518,6 +518,9 @@
 	[/link]
 	# TODO: Map generation
 	{DATA_TAG generator 0 1}
+	# TODO: These are needed here for MP campaigns... can we work around that somehow?
+	{SIMPLE_KEY new_game_title t_string}
+	{BASE_COMPATIBILITY_KEYS}
 [/tag]
 [tag]
 	name="test"
@@ -534,8 +537,8 @@
 	name="multiplayer"
 	max=infinite
 	super="scenario"
-	{SIMPLE_KEY new_game_title t_string}
-	{BASE_COMPATIBILITY_KEYS}
+	#{SIMPLE_KEY new_game_title t_string}
+	#{BASE_COMPATIBILITY_KEYS}
 	{SIMPLE_KEY force_modification string_list}
 	{SIMPLE_KEY require_scenario bool}
 	{SIMPLE_KEY mp_village_gold int}
